5182. Fix Searchfield Alignment

--- a/src/components/searchfield/_searchfield-new.scss
+++ b/src/components/searchfield/_searchfield-new.scss
@@ -50,6 +50,10 @@
       height: 34px;
       padding-bottom: 6px;
       padding-top: 6px;
+
+      @media only screen and (max-width: $breakpoint-big-phone + 60) {
+        height: 38px;
+      }
     }
 
     > .icon,
@@ -73,7 +77,7 @@
     transform: translateY(-50%);
 
     @media only screen and (max-width: $breakpoint-big-phone + 60) {
-      margin: -2px 35px 0px 0px;
+      margin: 0px 35px 0px 0px;
     }
 
     & > svg.close.icon {
